# bookstore

./: .gitignore  README.md  notes.md
bookstore/: Cargo.toml  Dockerfile
bookstore/integration/src/: bookstore_test.rs  main.rs
bookstore/integration/src/testharness/: dbtools.rs  mod.rs  reporting.rs  testselector.rs
bookstore/migrations/: 20250325104727_initial.sql
bookstore/src/: appstate.rs  bookstore.rs  handlers.rs  lib.rs  main.rs  util.rs
manifests/: bookstore.yml  concourse.yml  image-updater.yml
manifests/bookstore/: 00_namespace.yml  db.yml  deployment.yml  kustomization.yaml
manifests/concourse/: chart.yml  values.yaml
manifests/image-updater/: install.yaml
pipelines/: bookstore.yml
pipelines/tasks/: build_image.yml  test.yml
