[package]
name = "bookstore"
version = "0.1.0"
edition = "2024"

[[test]]
harness = false
name = "integration"
path = "integration/src/main.rs"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
color-eyre = "0.6.3"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "tokio-macros"] }
inventory = "0.3"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid"] }
uuid = { version = "1.16", features = ["serde", "v4"] }
tower = { version = "*", features = ["util"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.0"
